--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark"  data-a11y-animated-images="system" data-a11y-link-underlines="false">
+<html lang="en" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark"  data-a11y-animated-images="system" data-a11y-link-underlines="true">
 <head>
 
   <meta charset="utf-8">
@@ -9,13 +9,13 @@
   <link rel="dns-prefetch" href="https://github.githubassets.com">
   <link rel="preconnect" href="https://github.githubassets.com" crossorigin>
 
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/light-a09cef873428.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/light-b92e9647318f.css" />
   <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/dark-5d486a4ede8e.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-primitives-6143c8f97ed1.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-047ee6293fcd.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/global-1ef6adcf9af4.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/github-0eb2e2dcb344.css" />
-  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/code-1fecec11b11c.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-primitives-363ec1831c26.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-0cdc607a5517.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/global-b2298340fd5b.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/github-f2eafb2a55aa.css" />
+  <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/code-71ecd5638fbf.css" />
 
 </head>
 <!--
@@ -78,6 +78,7 @@
                 <div class="SelectMenu-list SelectMenu-list--borderless p-2" style="overscroll-behavior: contain;" data-filterable-for="toc-filter-field" data-filterable-type="substring">
                   <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#architecture">Architecture</a>
                   <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#features">Features</a>
+                  <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#comparison">Comparison</a>
                   <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#download-from-maven-central">Download From Maven Central</a>
                   <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#build-from-source">Build From Source</a>
                   <a role="menuitem" class="filter-item SelectMenu-item ws-normal wb-break-word line-clamp-2 py-1 " style="-webkit-box-orient: vertical; padding-left: 24px;" data-action="click:readme-toc#blur" data-targets="readme-toc.entries" data-hydro-click="{&quot;event_type&quot;:&quot;repository_toc_menu.click&quot;,&quot;payload&quot;:{&quot;target&quot;:&quot;entry&quot;,&quot;repository_id&quot;:546544025,&quot;originating_url&quot;:&quot;https://github.com/dromara/disjob&quot;,&quot;user_id&quot;:null}}" data-hydro-click-hmac="86b485eb1126a2506ca80f19760fdc4af4c3c5d3fea204a19059d3c003cb0390" href="#quick-start">Quick Start</a>
@@ -98,7 +99,7 @@
       </div>
 
       <div data-target="readme-toc.content" class="Box-body px-5 pb-5">
-        <article class="markdown-body entry-content container-lg" itemprop="text"><h1 tabindex="-1" id="user-content-----" dir="auto"><a class="heading-link" href="#----"><img src="https://raw.githubusercontent.com/dromara/disjob/master/docs/images/logo.png" width="125" alt="Logo" style="max-width: 100%;"> </a><a href="https://www.apache.org/licenses/LICENSE-2.0.html" rel="nofollow"><img src="https://camo.githubusercontent.com/20b3bc1c34ed71700bd0fc067de4d50e73468def345f89780f839e516cacf8b0/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6c6963656e73652d4170616368652d2d322e302d677265656e2e737667" alt="License" data-canonical-src="https://img.shields.io/badge/license-Apache--2.0-green.svg" style="max-width: 100%;"></a> <a href="https://www.oracle.com/java/technologies/downloads/#java8" rel="nofollow"><img src="https://camo.githubusercontent.com/491e42a3617b89ac8f08a5b249f31d79bd50f7b268e547701840c82d0c9de759/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6a646b2d382b2d677265656e2e737667" alt="JDK" data-canonical-src="https://img.shields.io/badge/jdk-8+-green.svg" style="max-width: 100%;"></a> <a href="https://central.sonatype.com/namespace/cn.ponfee" rel="nofollow"><img src="https://camo.githubusercontent.com/106ddeb839f22f29dc11f799d543afa86751334a6b8ce737f70686616773949b/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6d6176656e2d2d63656e7472616c2d322e302e332d6f72616e67652e7376673f7374796c653d706c6173746963266c6f676f3d6170616368656d6176656e" alt="Maven Central" data-canonical-src="https://img.shields.io/badge/maven--central-2.0.4-orange.svg?style=plastic&amp;logo=apachemaven" style="max-width: 100%;"></a> <a href="https://github.com/dromara/disjob/actions"><img src="https://github.com/dromara/disjob/workflows/build/badge.svg" alt="Build status" style="max-width: 100%;"></a><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></h1>
+        <article class="markdown-body entry-content container-lg" itemprop="text"><h1 tabindex="-1" id="user-content-----" dir="auto"><a class="heading-link" href="#----"><img src="https://raw.githubusercontent.com/dromara/disjob/master/docs/images/logo.png" width="125" alt="Logo" style="max-width: 100%;"> </a><a href="https://www.apache.org/licenses/LICENSE-2.0.html" rel="nofollow"><img src="https://camo.githubusercontent.com/20b3bc1c34ed71700bd0fc067de4d50e73468def345f89780f839e516cacf8b0/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6c6963656e73652d4170616368652d2d322e302d677265656e2e737667" alt="License" data-canonical-src="https://img.shields.io/badge/license-Apache--2.0-green.svg" style="max-width: 100%;"></a> <a href="https://www.oracle.com/java/technologies/downloads/#java8" rel="nofollow"><img src="https://camo.githubusercontent.com/491e42a3617b89ac8f08a5b249f31d79bd50f7b268e547701840c82d0c9de759/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6a646b2d382b2d677265656e2e737667" alt="JDK" data-canonical-src="https://img.shields.io/badge/jdk-8+-green.svg" style="max-width: 100%;"></a> <a href="https://central.sonatype.com/namespace/cn.ponfee" rel="nofollow"><img src="https://camo.githubusercontent.com/e108611944e413b2bea8b67afd1e87e49d35ad632880d7587718b1ada5e33e3a/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6d6176656e2d2d63656e7472616c2d322e302e342d6f72616e67652e7376673f7374796c653d706c6173746963266c6f676f3d6170616368656d6176656e" alt="Maven Central" data-canonical-src="https://img.shields.io/badge/maven--central-2.0.4-orange.svg?style=plastic&amp;logo=apachemaven" style="max-width: 100%;"></a> <a href="https://github.com/dromara/disjob/actions"><img src="https://github.com/dromara/disjob/workflows/build/badge.svg" alt="Build status" style="max-width: 100%;"></a><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></h1>
           <p dir="auto"><strong><code>简体中文</code></strong> | <a href="https://github.com/dromara/disjob/blob/master/README.en.md">English</a></p>
           <p dir="auto">一款分布式的任务调度框架，除了具备常规的任务调度功能外，还提供：暂停/取消运行中的任务、恢复执行被暂停的任务、任务分片、失败重试、广播任务、任务依赖、工作流任务(DAG)、管理器与执行器分离部署、Web管理后台等能力。</p>
           <p dir="auto">轻量级，简单易用，特别适合长任务的执行。有较好的伸缩性、扩展性、稳定性，历经生产检验。</p>
@@ -174,13 +175,90 @@
             <li>需要指定Job的分组(job-group)，Job的任务只会派发给指定组的Worker执行</li>
             <li>提供任务分片的能力，重写拆分方法<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/handle/JobSplitter.java">JobHandler#split</a>即可拆分为多个任务，实现分布式任务及并行执行</li>
             <li>支持暂停和取消运行中的任务，已暂停的任务可恢复继续执行，执行失败的任务支持重试</li>
-            <li>支持任务保存(savepoint)其执行状态，让手动或异常暂停的任务能从上一次的执行状态中恢复继续执行</li>
+            <li>支持任务保存(Savepoint)其执行状态，让手动或异常暂停的任务能从上一次的执行状态中恢复继续执行</li>
             <li>任务在执行时若抛出<a href="https://github.com/dromara/disjob/blob/master/disjob-core/src/main/java/cn/ponfee/disjob/core/exception/PauseTaskException.java">PauseTaskException</a>，会暂停对应实例下的全部任务(包括分布在不同worker机器中的任务)</li>
             <li>支持广播任务，广播任务会派发给job-group下的所有worker执行</li>
             <li>支持Job间的依赖，多个Job配置好依赖关系后便会按既定的依赖顺序依次执行</li>
             <li>支持DAG工作流，可把jobHandler配置为复杂的DAG表达式，如：A-&gt;B,C,(D-&gt;E)-&gt;D,F-&gt;G</li>
             <li>提供Web管理后台，通过界面进行作业配置，任务监控等</li>
           </ul>
+          <h2 tabindex="-1" id="user-content-comparison" dir="auto"><a class="heading-link" href="#comparison">Comparison<svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></h2>
+          <table>
+            <thead>
+            <tr>
+              <th><strong>Feature</strong></th>
+              <th><strong>Quartz</strong></th>
+              <th><strong>Elastic-Job</strong></th>
+              <th><strong>Xxl-Job</strong></th>
+              <th><strong>Disjob</strong></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td><strong>触发类型</strong></td>
+              <td>Cron</td>
+              <td>Cron</td>
+              <td>Cron、固定频率、父子依赖</td>
+              <td>Cron、指定时间、固定频率、固定延时、父子依赖</td>
+            </tr>
+            <tr>
+              <td><strong>任务编排</strong></td>
+              <td>不支持</td>
+              <td>不支持</td>
+              <td>不支持</td>
+              <td>DAG表达式</td>
+            </tr>
+            <tr>
+              <td><strong>任务分片</strong></td>
+              <td>不支持</td>
+              <td>静态分片</td>
+              <td>广播任务</td>
+              <td>广播任务、动态分片</td>
+            </tr>
+            <tr>
+              <td><strong>停止与恢复</strong></td>
+              <td>不支持</td>
+              <td>不支持</td>
+              <td>终止运行中的任务</td>
+              <td>暂停执行中的任务、恢复已暂停的任务</td>
+            </tr>
+            <tr>
+              <td><strong>保存执行快照</strong></td>
+              <td>不支持</td>
+              <td>不支持</td>
+              <td>不支持</td>
+              <td>支持</td>
+            </tr>
+            <tr>
+              <td><strong>失败重试</strong></td>
+              <td>不支持</td>
+              <td>失效转移</td>
+              <td>支持</td>
+              <td>支持</td>
+            </tr>
+            <tr>
+              <td><strong>后台管理</strong></td>
+              <td>不支持</td>
+              <td>支持</td>
+              <td>支持</td>
+              <td>支持</td>
+            </tr>
+            <tr>
+              <td><strong>监控告警</strong></td>
+              <td>不支持</td>
+              <td>邮件</td>
+              <td>邮件</td>
+              <td>暂不支持</td>
+            </tr>
+            <tr>
+              <td><strong>查看执行日志</strong></td>
+              <td>不支持</td>
+              <td>支持</td>
+              <td>支持</td>
+              <td>暂不支持</td>
+            </tr>
+            </tbody>
+          </table>
           <h2 tabindex="-1" id="user-content-download-from-maven-central" dir="auto"><a class="heading-link" href="#download-from-maven-central"></a><a href="https://central.sonatype.com/namespace/cn.ponfee" rel="nofollow">Download From Maven Central</a><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></h2>
           <div class="highlight highlight-text-xml notranslate position-relative overflow-auto" dir="auto" data-snippet-clipboard-copy-content="&lt;dependency&gt;
   &lt;groupId&gt;cn.ponfee&lt;/groupId&gt;
@@ -228,11 +306,11 @@
           <ul dir="auto">
             <li>浏览器访问【 <a href="http://127.0.0.1:80/" rel="nofollow">http://127.0.0.1:80/</a> 】登录管理后台，用户名/密码：<code>admin</code>/<code>admin123</code></li>
             <li>登录后在左侧菜单栏找到<code>调度管理</code>菜单，即可使用调度管理功能</li>
-            <li>调度配置：作业(job)配置，包括查看、新增、修改、删除、触发、禁用等</li>
-            <li>调度实例：job具体时间点要触发执行的实例(instance)，一个实例被拆分成若干个任务(task)
+            <li><strong>调度配置</strong>：作业(job)配置，包括查看、新增、修改、删除、触发、禁用等</li>
+            <li><strong>调度实例</strong>：job在某一时间点被触发执行的实例(instance)，一个实例会拆分成若干个任务(task)
               <ul dir="auto">
-                <li>第一个分页表格为<code>查询root实例</code>并支持下钻，root是指首次触发的实例，包括：普通的非重试实例、工作流(DAG)的lead实例、依赖关系的第一个实例</li>
-                <li>鼠标向下滚动页面后看到的第二个分页表格为<code>查询所有实例</code></li>
+                <li>在页面上方的<code>第一个分页表格</code>是以树状(tree)方式展示调度实例，并支持下钻</li>
+                <li>鼠标向下滚动页面后看到的<code>第二个分页表格</code>是以扁平(flat)方式展示调度实例</li>
               </ul>
             </li>
           </ul>
@@ -240,8 +318,8 @@
             <li>链接地址</li>
           </ol>
           <ul dir="auto">
-            <li>管理后台演示地址：【 <a href="http://ponfee.cn:8000/" rel="nofollow">http://ponfee.cn:8000/</a> 】，用户名/密码：<code>disjob</code>/<code>disjob123</code></li>
-            <li>在线文档地址：<code>正在建设中，敬请期待！</code></li>
+            <li>管理后台<strong>演示地址</strong>：【 <a href="http://ponfee.cn:8000/" rel="nofollow">http://ponfee.cn:8000/</a> 】，用户名/密码：<code>disjob</code>/<code>disjob123</code></li>
+            <li>在线查看<strong>文档地址</strong>：<code>正在建设中，敬请期待！</code></li>
           </ul>
           <h2 tabindex="-1" id="user-content-user-guide" dir="auto"><a class="heading-link" href="#user-guide">User Guide<svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg></a></h2>
           <ol dir="auto">
